Use single quotes to ease pasting into `Rscript -e ""`

--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -106,7 +106,7 @@ The annotations from `/bucket/LuscombeU/common/Breakpoints/Annotations` are
 distributed in the same drat repository as the alignment data.
 
 ```
-install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
+install.packages('BreakpointsData', repos='https://oist.github.io/plessy_oikgenomes_drat/')
 ```
 
 The `OikScrambling:::loadAllAnnotations()` function returns `TxDB` objects.
