Try adding Plymouth vs Roscoff.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -204,7 +204,11 @@ gbs$Bar_Kum <- load_genomic_breaks_("Bar2_p4__KUM-M3-7f.gff.gz",            Bar2
 gbs$Bar_Aom <- load_genomic_breaks_("Bar2_p4__AOM-5-5f.gff.gz",             Bar2_p4,     AOM_5,         longShort$Bar) |> annotateWithReps.GBreaks(reps$Bar, reps$Aom)
 gbs$Bar_Nor <- load_genomic_breaks_("Bar2_p4__OdB3.gff.gz",                 Bar2_p4,     OdB3,          longShort$Bar) |> annotateWithReps.GBreaks(reps$Bar, reps$Nor)
 
-gbs <- annotateWithTranscripts(gbs, transcripts)
+Oik_Oik <- names(gbs)
+
+gbs$Ply_Ros <- load_genomic_breaks(system.file("extdata/Ciona_pairwise_v3/C_int_P__C_int_R.gff.gz", package = "BreakpointsData"),                 NULL,     NULL)
+
+gbs[Oik_Oik] <- annotateWithTranscripts(gbs[Oik_Oik], transcripts)
 gbs <- sapply(gbs, flagAll) |> SimpleList()
 ```
 
@@ -237,8 +241,8 @@ coa[ 1:5]  <- BiocParallel::bplapply(coa[ 1:5],  flagLongShort, longShort$Oki)
 coa[ 6:10] <- BiocParallel::bplapply(coa[ 6:10], flagLongShort, longShort$Osa)
 coa[11:15] <- BiocParallel::bplapply(coa[11:15], flagLongShort, longShort$Bar)
 
-coa <- annotateWithReps.GBreaksSimpleList(coa, reps)
-coa <- annotateWithTranscripts(coa, transcripts)
+coa[Oik_Oik] <- annotateWithReps.GBreaksSimpleList(coa[Oik_Oik], reps)
+coa[Oik_Oik] <- annotateWithTranscripts(coa[Oik_Oik], transcripts)
 
 coa <- sapply(coa, flagAll) |> SimpleList()
 ```
@@ -293,9 +297,9 @@ unalMap[ 1:5 ] <- BiocParallel::bplapply(unalMap[ 1:5 ], flagLongShort, longShor
 unalMap[ 6:10] <- BiocParallel::bplapply(unalMap[ 6:10], flagLongShort, longShort$Osa)
 unalMap[11:15] <- BiocParallel::bplapply(unalMap[11:15], flagLongShort, longShort$Bar)
 
-unalMap <- annotateWithReps.GBreaksSimpleList(unalMap, reps)
-unalMap <- annotateWithTranscripts(unalMap, transcripts)
-unalMap <- sapply(unalMap, flagAll) |> SimpleList()
+unalMap[Oik_Oik] <- annotateWithReps.GBreaksSimpleList(unalMap[Oik_Oik], reps)
+unalMap[Oik_Oik] <- annotateWithTranscripts(unalMap[Oik_Oik], transcripts)
+unalMap[Oik_Oik] <- sapply(unalMap[Oik_Oik], flagAll) |> SimpleList()
 ```
 
 Translocated regions
@@ -334,8 +338,8 @@ tra[ 1:5 ] <- BiocParallel::bplapply(tra[ 1:5 ], flagLongShort, longShort$Oki)
 tra[ 6:10] <- BiocParallel::bplapply(tra[ 6:10], flagLongShort, longShort$Osa)
 tra[11:15] <- BiocParallel::bplapply(tra[11:15], flagLongShort, longShort$Bar)
 
-tra <- annotateWithReps.GBreaksSimpleList(tra, reps)
-tra <- annotateWithTranscripts(tra, transcripts)
+tra[Oik_Oik] <- annotateWithReps.GBreaksSimpleList(tra[Oik_Oik], reps)
+tra[Oik_Oik] <- annotateWithTranscripts(tra[Oik_Oik], transcripts)
 tra <- sapply(tra, flagAll) |> SimpleList()
 ```
 
@@ -365,8 +369,8 @@ coa2[ 1:5]  <- BiocParallel::bplapply(coa2[ 1:5],  flagLongShort, longShort$Oki)
 coa2[ 6:10] <- BiocParallel::bplapply(coa2[ 6:10], flagLongShort, longShort$Osa)
 coa2[11:15] <- BiocParallel::bplapply(coa2[11:15], flagLongShort, longShort$Bar)
 
-coa2 <- annotateWithReps.GBreaksSimpleList(coa2, reps)
-coa2 <- annotateWithTranscripts(coa2, transcripts)
+coa2[Oik_Oik] <- annotateWithReps.GBreaksSimpleList(coa2[Oik_Oik], reps)
+coa2[Oik_Oik] <- annotateWithTranscripts(coa2[Oik_Oik], transcripts)
 coa2 <- sapply(coa2, flagAll) |> SimpleList()
 ```
 
@@ -403,8 +407,8 @@ tra2[ 1:5 ] <- BiocParallel::bplapply(tra2[ 1:5 ], flagLongShort, longShort$Oki)
 tra2[ 6:10] <- BiocParallel::bplapply(tra2[ 6:10], flagLongShort, longShort$Osa)
 tra2[11:15] <- BiocParallel::bplapply(tra2[11:15], flagLongShort, longShort$Bar)
 
-tra2 <- annotateWithReps.GBreaksSimpleList(tra2, reps)
-tra2 <- annotateWithTranscripts(tra2, transcripts)
+tra2[Oik_Oik] <- annotateWithReps.GBreaksSimpleList(tra2[Oik_Oik], reps)
+tra2[Oik_Oik] <- annotateWithTranscripts(tra2[Oik_Oik], transcripts)
 
 tra2 <- sapply(tra2, flagAll) |> SimpleList()
 ```
